--- a/SS2025.html
+++ b/SS2025.html
@@ -8,11 +8,16 @@
 </head>
 <body>
     <section class="hometab">
-        <a class="home" href="./"><img id="logo" src="COLLECTIVE_DIVISION.png"></a>
+        <a class="home" href="./"><img id="logo" src="COLLECTIVE_DIVISION.png" alt="Logo"></a>
     </section>
-    
-    <section class="COMING">
-        <h1>SS2025 COMING SOON</h1>
-    </section>
+    <div class="title">
+        <h1>SPRING-SUMMER 2025</h1>
+    </div>
+    <div class="content">
+        <ul class="clothes">
+            <li><button>"PEACE" TEE<br><img src="WORLLDPEACE.png" alt="WORLDPEACE"><br>€300 - SOLD OUT</button></li>
+            <li><button>COMING SOON<br><img src="BLANK TSHIRT.png" alt="blank"><br>???</button></li>
+        </ul>
+    </div>
 </body>
 </html>
