--- a/Lookbook.html
+++ b/Lookbook.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <section class="hometab">
-        <a class="home" href="./"><img id="logo" src="COLLECTIVE_DIVISION.png"></a>
+        <a class="home" href="./"><img id="logo" src="Images/COLLECTIVE_DIVISION.png" alt="Logo"></a>
     </section>
-    
+
     <section class="COMING">
         <h1>LOOKBOOK COMING SOON</h1>
     </section>
