--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <section class="header">
         <nav class="navbar">
-                <a class="logo" href="./"><img id="COLLECTIVE DIVISION" src="COLLECTIVE_DIVISION.png"></a>
+                <a class="logo" href="index.html"><img id="COLLECTIVE DIVISION" src="images/COLLECTIVE_DIVISION.png"></a>
                 <ul class="links">
-                    <li><a href="./Lookbook">LOOKBOOK</a></li>
-                    <li><a href="./SS2025">SS2025</a></li>
-                    <li><a href="./Contact">CONTACT</a></li>
+                    <li><a href="Lookbook.html">LOOKBOOK</a></li>
+                    <li><a href="SS2025.html">SS2025</a></li>
+                    <li><a href="Contact.html">CONTACT</a></li>
                 </ul>
             </nav>
         </section>
