--- a/SS2025.html
+++ b/SS2025.html
@@ -15,8 +15,8 @@
     </div>
     <div class="content">
         <ul class="clothes">
-            <li><button>"PEACE" TEE<br><img src="images/WORLLDPEACE.png" alt="WORLDPEACE"><br>€300 - SOLD OUT</button></li>
-            <li><button>COMING SOON<br><img src="images/BLANK TSHIRT.png" alt="blank"><br>???</button></li>
+            <li><button>"PEACE" TEE<br><img src="./Images/WORLLDPEACE.png" alt="WORLDPEACE"><br>€300 - SOLD OUT</button></li>
+            <li><button>COMING SOON<br><img src="./Images/BLANK TSHIRT.png TSHIRT.png" alt="blank"><br>???</button></li>
         </ul>
     </div>
 </body>
