--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="hometab">
-        <a class="home" href="./"><img id="logo" src="./Images/COLLECTIVE_DIVISION.png" alt="Logo"></a>
+        <a class="home" href="./"><img id="logo" src="Images/COLLECTIVE_DIVISION.png" alt="Logo"></a>
     </section>
     
     <section class="Subscribe">
