--- a/SS2025.html
+++ b/SS2025.html
@@ -11,12 +11,12 @@
         <a class="home" href="./"><img id="logo" src="Images/COLLECTIVE_DIVISION.png" alt="Logo"></a>
     </section>
     <div class="title">
-        <h1>SPRING-SUMMER 2025</h1>
+        <h1>SPRING 2025</h1>
     </div>
     <div class="content">
         <ul class="clothes">
-            <li><button>"PEACE" TEE<br><img src="images/WORLLDPEACE.png" alt="WORLDPEACE"><br>€300 - SOLD OUT</button></li>
-            <li><button>COMING SOON<br><img src="images/BLANK_TSHIRT.png" alt="blank"><br>???</button></li>
+            <li><button>"PEACE" TEE<br><img src="Images/WORLLDPEACE.png" alt="WORLDPEACE"><br>€300 - SOLD OUT</button></li>
+            <li><button>COMING SOON<br><img src="Images/BLANK_TSHIRT.png" alt="blank"><br>???</button></li>
         </ul>
     </div>
 </body>
