--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="header">
         <nav class="navbar">
-                <a class="logo" href="./"><img id="COLLECTIVE DIVISION" src="Images/COLLECTIVE_DIVISION.png"></a>
+                <a class="logo" href="./home"><img id="COLLECTIVE DIVISION" src="Images/COLLECTIVE_DIVISION.png"></a>
                 <ul class="links">
                     <li><a href="Lookbook.html">LOOKBOOK</a></li>
                     <li><a href="SS2025.html">SS2025</a></li>
