--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="header">
         <nav class="navbar">
-            <a class="home" href="./"><img id="logo" src="Images/COLLECTIVE_DIVISION.png" alt="Logo"></a>
+            <a class="home" href="index.html"><img id="logo" src="Images/COLLECTIVE_DIVISION.png" alt="Logo"></a>
                 <ul class="links">
                     <li><a href="Lookbook.html">LOOKBOOK</a></li>
                     <li><a href="SS2025.html">SS2025</a></li>
