--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <section class="header">
         <nav class="navbar">
-            <a class="home" href="index.html"><img id="logo" src="Images/COLLECTIVE_DIVISION.png" alt="Logo"></a>
+                <a class="logo" href="index.html"><img id="COLLECTIVE DIVISION" src="Images/COLLECTIVE_DIVISION.png"></a>
                 <ul class="links">
                     <li><a href="Lookbook.html">LOOKBOOK</a></li>
-                    <li><a href="SS2025.html">SS2025</a></li>
+                    <li><a href="SS2025.html">SPRING 2025</a></li>
                     <li><a href="Contact.html">CONTACT</a></li>
                 </ul>
             </nav>
