--- a/Backups/indexbackup.html
+++ b/Backups/indexbackup.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>COLLECTIVE DIVISION</title>
 </head>
 
 <body>
     <section class="header">
         <nav class="navbar">
-                <img id="COLLECTIVE DIVISION" src="img/COLLECTIVE_DIVISION.png">
+                <a class="logo" href="index.html"><img id="COLLECTIVE DIVISION" src="Images/COLLECTIVE_DIVISION.png"></a>
                 <ul class="links">
-                    <li><a href="lookbook.html">LOOKBOOK</a></li>
-                    <li><a href="spring2025.html">SPRING 2025</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="Lookbook.html">LOOKBOOK</a></li>
+                    <li><a href="SS2025.html">SPRING 2025</a></li>
+                    <li><a href="Contact.html">CONTACT</a></li>
                 </ul>
             </nav>
         </section>
